# django-notes-app

./: README.md  pyproject.toml
notes/noteapp/: forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/noteapp/templates/noteapp/: base.html  detail.html  index.html  note.html  temp.html
notes/notes/: settings.py  urls.py
notes/users/: forms.py  models.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
notes/users/templates/users/: profile.html  signup.html
