[tool.poetry]
name = "0-django-notes-app"
version = "0.1.0"
description = ""
authors = ["II-777 <45958058+II-777@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
psycopg2-binary = "^2.9.9"
Pillow = "^10.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
